--- a/app/assets/stylesheets/panels/_panels.less
+++ b/app/assets/stylesheets/panels/_panels.less
@@ -95,6 +95,8 @@
 	text-transform: uppercase;
 	.font(3, 6.5);
 	.margin(0);
+	.padding-right(@f1);
+	display: inline-block;
 
 	&.folder {
 		cursor: pointer;
